#36 Added trophy.html and rendered member level

--- a/templates/includes/comment.html
+++ b/templates/includes/comment.html
@@ -5,7 +5,7 @@
     <div
       class="user-icon"
     >
-    {% include 'includes/level.html' with level=post.name.profile.get_level %}
+    {% include 'includes/trophy.html' with level=post.name.profile.get_level %}
 
     </div>
   </div>
