--- a/templates/includes/level.html
+++ b/templates/includes/level.html
@@ -1,9 +1,9 @@
 {% if level == 1 %}
-    <i class="fa-solid fa-trophy profile-icon bronze"></i>
+    <p class='bronze'>Bronze User</p>
 {% elif level == 2 %}
-    <i class="fa-solid fa-trophy profile-icon silver"></i>
+    <p class='silver'>Silver Member</p>
 {% elif level == 3 %}
-    <i class="fa-solid fa-trophy profile-icon gold"></i>
+    <p class='gold'>Gold Member</p>
 {% elif level >= 4 %}
-    <i class="fa-solid fa-trophy profile-icon platinum"></i>
+    <p class='platinum'>Platinum Member</p>
 {% endif %}
