--- a/templates/profile.html
+++ b/templates/profile.html
@@ -6,11 +6,11 @@
       <div class="card">
         <div class="card-body">
           <div class="d-flex flex-column align-items-center text-center">
-            {% include 'includes/level.html' with level=profile.profile.get_level %}
+            {% include 'includes/trophy.html' with level=profile.profile.get_level %}
             <div class="mt-3">
               <h4 class="text-capitalize">{{profile.username}}</h4>
               <p class="text-secondary mb-1">
-                Level: {{profile.profile.get_level }}
+                {% include 'includes/level.html' with level=profile.profile.get_level %}
               </p>
               <p class="text-secondary mb-1">
                 Joined: {{profile.date_joined|date:"F d, Y" }}
