--- a/templates/update_profile.html
+++ b/templates/update_profile.html
@@ -3,7 +3,7 @@
 {% block content %} 
 
 {% load crispy_forms_tags %}
-<section id="profile" class="container text-center text-white p-4">
+<section id="profile" class="container text-center p-4">
 
     <h1 class='display-5 text-green fw-bolder'>Edit Your User Information</h1>
     <div class="custom-form p-lg-4 p-2 pt-4 rounded-2 shadow-lg bg-light text-center my-3">
@@ -34,5 +34,11 @@
           <i class="fa-solid fa-unlock"></i> Change Password
         </button>
       </form>
+
+      <h2 class='text-danger fw-bold mb-5 text-decoration-underline'>Delete your account</h2>
+      {% include "includes/modal.html" %}
       {% endblock content %}
+
+
+
 </section>
