--- a/templates/profile.html
+++ b/templates/profile.html
@@ -119,55 +119,73 @@
     <h2 class='text-green fw-bolder display-6'>
       <strong class='text-uppercase text-green'> {{profile.username}}'s Posts</strong>
     </h2>
+
+    {% if posts_page|length == 0 %}
+    <p class="text-capitalize h4 text-white">
+      No Posts
+      <i class="fa-solid fa-face-sad-tear"></i>
+    </p>
+    {% endif %}
+
       {% for post in posts_page %}
           <div class="col-lg-3 col-md-6 g-1 mt-3 mb-3">
               {% include "includes/post-preview.html" %}
           </div>
       {% endfor %}
   </div>
+  <!-- Pagination controls for user posts -->
+  {% if posts_page.has_other_pages %}
+  <nav aria-label="Page navigation">
+    <ul class="pagination justify-content-center">
+      {% if posts_page.has_previous %}
+      <li class="page-item">
+        <a href="?posts_page=1" class="page-link">&laquo; First</a>
+      </li>
+      <li class="page-item">
+        <a href="?posts_page={{ posts_page.previous_page_number }}" class="page-link"
+          >&lt; Previous</a
+        >
+      </li>
+      {% endif %}
 
-      <!-- Page Pagination -->
-      <nav aria-label="Page navigation">
-        <ul class="pagination justify-content-center">
-          {% if posts_page.has_previous %}
-          <li class="page-item">
-            <a href="?page=1" class="page-link">&laquo; First</a>
-          </li>
-          <li class="page-item">
-            <a href="?page={{ posts_page.previous_page_number }}" class="page-link"
-              >&lt; Previous</a
-            >
-          </li>
-          {% endif %}
-  
-          <!-- Display individual page numbers -->
-          {% for page_num in posts_page.paginator.page_range %}
-          <li
-            class="page-item{% if page_num == posts_page.number %} active{% endif %}"
-          >
-            <a href="?page={{ page_num }}" class="page-link">{{ page_num }}</a>
-          </li>
-          {% endfor %} {% if posts_page.has_next %}
-          <li class="page-item">
-            <a href="?page={{ posts_page.next_page_number }}" class="page-link"
-              >Next &gt;</a
-            >
-          </li>
-          <li class="page-item">
-            <a href="?page={{ posts_page.paginator.num_pages }}" class="page-link"
-              >Last &raquo;</a
-            >
-          </li>
-          {% endif %}
-        </ul>
-      </nav>
-</section> 
+      <!-- Display individual page numbers -->
+      {% for page_num in posts_page.paginator.page_range %}
+      <li
+        class="page-item{% if page_num == posts_page.number %} active{% endif %}"
+      >
+        <a href="?posts_page={{ page_num }}" class="page-link">{{ page_num }}</a>
+      </li>
+      {% endfor %} {% if posts_page.has_next %}
+      <li class="page-item">
+        <a href="?posts_page={{ posts_page.next_page_number }}" class="page-link"
+          >Next &gt;</a
+        >
+      </li>
+      <li class="page-item">
+        <a href="?posts_page={{ posts_page.paginator.num_pages }}" class="page-link"
+          >Last &raquo;</a
+        >
+      </li>
+      {% endif %}
+    </ul>
+  </nav>
+  {% endif %}
+
+</section>
 
 <section id="favourites" class="text-center">
   <div class="row p-3">
     <h2 class='text-green fw-bolder display-6'>
-      <strong class='text-uppercase text-green'> {{profile.username}}'s Posts</strong>
+      <strong class='text-uppercase text-green'> {{profile.username}}'s Favourites</strong>
     </h2>
+
+   
+    {% if favourites_page|length == 0 %}
+    <p class="text-capitalize h4 text-white">
+      No Favourites
+      <i class="fa-solid fa-face-sad-tear"></i>
+    </p>
+    {% endif %}
 
       {% for post in favourites_page %}
           <div class="col-lg-3 col-md-6 g-1 mt-3 mb-3">
