Added auth redirection for comments form and like button

--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -120,6 +120,12 @@ img {
   border-radius: 10px;
 }
 
+/* POST DETAIL */
+.btn-like {
+  border: none;
+  background: transparent;
+}
+
 /* BANNER */
 .banner-border {
   position: absolute;
