--- a/templates/post-detail.html
+++ b/templates/post-detail.html
@@ -57,6 +57,8 @@
                   name="blogpost_id"
                   value="{{post.slug}}"
                   class="btn-like"
+                  style="border: none; background: transparent"
+
                 >
                   <i class="fa-solid fa-thumbs-up text-primary"></i>
                 </button>
@@ -66,6 +68,8 @@
                   name="blogpost_id"
                   value="{{post.slug}}"
                   class="btn-like text-primary"
+                  style="border: none; background: transparent"
+
                 >
                   <i class="fa-regular fa-thumbs-up"></i>
                 </button>
@@ -73,10 +77,12 @@
               </form>
 
               {% else %}
-              <span class="text-secondary"><i class="far fa-heart"></i></span>
+              <a style="text-decoration: none;" href="{% url 'account_login' %}">
+                <i class="far fa-heart text-secondary"></i>
+              </a>
               {% endif %}
               <!-- The number of likes goes before the closing strong tag -->
-              <span class="text-secondary">{{ post.number_of_likes }} </span>
+              <span class="text-secondary">{{ post.number_of_likes }}</span>
             </strong>
           </div>
         </div>
@@ -106,14 +112,10 @@
     </section>
 
     <section id="add-comment" class="card p-3 mt-3 mb-3">
+      {% if user.is_authenticated %}
       <h2>Like what you read? Leave a comment!</h2>
       <hr />
       <div class="card-body p-1">
-        {% if commented %}
-        <div class="alert alert-success" role="alert">
-          Your comment is awaiting approval
-        </div>
-        {% else %} {% if user.is_authenticated %}
 
         <p>Posting as: {{ user.username }}</p>
         <form method="post">
@@ -122,10 +124,13 @@
           {% csrf_token %}
           <button type="submit" class="btn btn-primary btn-lg">Submit</button>
         </form>
-        {% endif %} {% endif %}
       </div>
+        {% else %}
+        <h2>Login to leave a comment</h2>
+        <a class="btn btn-primary" href="{% url 'account_login' %}">Login</a>
+        <hr />
+        {% endif %}
     </section>
-    
   </section>
 
 
