--- a/templates/account/login.html
+++ b/templates/account/login.html
@@ -10,13 +10,13 @@
 <!--  -->
 {% block content %}
 
-<section class="container text-center text-light p-4">
+<section class="text-center text-light">
   <h1>{% trans "Sign In" %}</h1>
   <hr />
   <div class="row justify-content-center">
     <div class="col-12 col-md-6 col-lg-4 mt-5 mb-5">
       <form
-        class="login text-dark"
+        class="bg-light text-center p-4 text-dark rounded-1"
         method="POST"
         action="{% url 'account_login' %}"
       >
