--- a/templates/account/signup.html
+++ b/templates/account/signup.html
@@ -7,13 +7,13 @@
 {% block head_title %}{% trans "Signup" %}{% endblock %}
 <!--  -->
 {% block content %}
-<section class="container text-center text-light p-4">
+<section class='text-center text-light'>
   <h1>{% trans "Sign up" %}</h1>
   <hr />
   <div class="row justify-content-center">
     <div class="col-12 col-md-6 col-lg-4 mt-5 mb-5">
       <form
-        class="signup text-dark"
+        class="bg-light text-center p-4 text-dark rounded-1"
         id="signup_form"
         method="post"
         action="{% url 'account_signup' %}"
