--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -171,6 +171,78 @@ img {
   font-weight: bold;
 }
 
+/* FOOTER  SOCIAL ICONS */
+
+.github:hover,
+.github:focus {
+  transition: all 0.2s;
+  transform: scale(1.1);
+  filter: brightness(1.1);
+  cursor: pointer;
+  color: white !important;
+  background: #f17f06;
+}
+
+.linkedin:hover,
+.linkedin:focus {
+  transition: all 0.2s;
+  transform: scale(1.1);
+  filter: brightness(1.1);
+  cursor: pointer;
+  color: white !important;
+  background: #0e76a8;
+}
+
+.twitter:hover,
+.twitter:focus {
+  transition: all 0.2s;
+  transform: scale(1.1);
+  filter: brightness(1.1);
+  cursor: pointer;
+  color: white !important;
+  background: linear-gradient(45deg, #1da1f2, #0d90e0);
+}
+
+.facebook:hover,
+.facebook:focus {
+  transition: all 0.2s;
+  transform: scale(1.1);
+  filter: brightness(1.1);
+  cursor: pointer;
+  color: white !important;
+  background-color: #2b4170;
+  background: -moz-linear-gradient(top, #3b5998, #2b4170);
+  background: -ms-linear-gradient(top, #3b5998, #2b4170);
+  background: -webkit-linear-gradient(top, #3b5998, #2b4170);
+}
+
+.instagram:hover,
+.instagram:focus {
+  transition: all 0.2s;
+  transform: scale(1.1);
+  filter: brightness(1.1);
+  cursor: pointer;
+  background: linear-gradient(
+    45deg,
+    #f09433 0%,
+    #e6683c 25%,
+    #dc2743 50%,
+    #cc2366 75%,
+    #bc1888 100%
+  );
+  color: white !important;
+}
+
+.google:hover,
+.google:focus {
+  transition: all 0.2s;
+  transform: scale(1.1);
+  filter: brightness(1.1);
+  cursor: pointer;
+  background: linear-gradient(-120deg, #4285f4, #34a853, #fbbc05, #ea4335);
+  color: white !important;
+}
+
 /* ANIMATIONS */
 
 .fade-in {
