--- a/templates/base.html
+++ b/templates/base.html
@@ -161,6 +161,70 @@
       {% endblock content %}
     </main>
 
+        <!-- Footer -->
+        <footer class="bg-dark text-center text-white">
+          <div class="container p-4 pb-0">
+            <section class="mb-4">
+              <!-- Facebook -->
+              <a
+                class="btn btn-outline-light m-1 facebook"
+                href="https://www.facebook.com/"
+                role="button"
+                target="_blank"
+                ><i class="fab fa-facebook-f"></i
+              ></a>
+    
+              <!-- Twitter -->
+              <a
+                class="btn btn-outline-light m-1 twitter"
+                href="https://twitter.com/"
+                role="button"
+                target="_blank"
+                ><i class="fab fa-twitter"></i
+              ></a>
+    
+              <!-- Google -->
+              <a
+                class="btn btn-outline-light m-1 google"
+                href="https://www.google.com/"
+                role="button"
+                target="_blank"
+                ><i class="fab fa-google"></i
+              ></a>
+    
+              <!-- Instagram -->
+              <a
+                class="btn btn-outline-light m-1 instagram"
+                href="https://www.facebook.com/"
+                role="button"
+                target="_blank"
+                ><i class="fab fa-instagram"></i
+              ></a>
+    
+              <!-- Linkedin -->
+              <a
+                class="btn btn-outline-light m-1 linkedin"
+                href="https://www.linkedin.com/in/darrach-barneveld-2b493511b/"
+                role="button"
+                target="_blank"
+                ><i class="fab fa-linkedin-in"></i
+              ></a>
+    
+              <!-- Github -->
+              <a
+                class="btn btn-outline-light m-1 github"
+                href="https://github.com/DarrachBarneveld"
+                role="button"
+                target="_blank"
+                ><i class="fab fa-github"></i
+              ></a>
+            </section>
+          </div>
+          <div class="text-center p-3" style="background-color: rgba(0, 0, 0, 0.2)">
+            © 2023 Copyright: CoolCoders - For educational purposes
+          </div>
+        </footer>
+
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
