--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -149,8 +149,8 @@ img {
   align-items: center;
   background-color: aliceblue;
   border-radius: 100%;
-  height: 100%;
   background: linear-gradient(270deg, #000000, #434343);
+  height: 100px;
 }
 
 /* ADD/EDIT POST FORM */
