--- a/templates/base.html
+++ b/templates/base.html
@@ -4,28 +4,28 @@
 <html lang="en">
   <head>
     <title>CodeStar Blog</title>
-    <link rel="preconnect" href="https://fonts.gstatic.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com">
     <link
       href="https://fonts.googleapis.com/css2?family=Roboto:wght@300&display=swap"
       rel="stylesheet"
-    />
+    >
     <link
       href="https://fonts.googleapis.com/css2?family=Lato:wght@300;700&display=swap"
       rel="stylesheet"
-    />
+    >
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css"
-    />
+    >
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css"
       rel="stylesheet"
       integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC"
       crossorigin="anonymous"
-    />
+    >
 
-    <link rel="stylesheet" href="{% static 'css/styles.css' %}" />
+    <link rel="stylesheet" href="{% static 'css/styles.css' %}" >
   </head>
   <body class="d-flex flex-column h-100">
     <!-- Navigation -->
@@ -139,7 +139,7 @@
       {% endfor %}
     </div>
 
-    <section id="banner">
+    <div id="banner">
       <div class="text-center position-relative">
         <svg
           class="banner-border"
@@ -153,7 +153,7 @@
           ></path>
         </svg>
       </div>
-    </section>
+    </div>
 
     <main class="flex-grow-1 container">
       {% block content %}
@@ -163,8 +163,7 @@
 
         <!-- Footer -->
         <footer class="bg-dark text-center text-white">
-          <div class="container p-4 pb-0">
-            <section class="mb-4">
+          <div class="container p-4 pb-0 mb-4">
               <!-- Facebook -->
               <a
                 class="btn btn-outline-light m-1 facebook"
@@ -218,7 +217,6 @@
                 target="_blank"
                 ><i class="fab fa-github"></i
               ></a>
-            </section>
           </div>
           <div class="text-center p-3" style="background-color: rgba(0, 0, 0, 0.2)">
             © 2023 Copyright: CoolCoders - For educational purposes
