--- a/templates/includes/post-snippet.html
+++ b/templates/includes/post-snippet.html
@@ -6,10 +6,11 @@
       <img
         class="card-img-sm"
         src="https://codeinstitute.s3.amazonaws.com/fullstack/blog/default.jpg"
-        width="100%"
-      />
+        alt="Placeholder article image"
+
+      >
       {% else %}
-      <img class="card-img-sm" src="{{ post.featured_image.url }}" />
+      <img class="card-img-sm" src="{{ post.featured_image.url }}" alt="Article hero image" >
       {% endif %}
       <div class="ps-2">
         <h3 class="text-capitalize h6">
@@ -39,7 +40,9 @@
           <li class="list-inline-item">
             <small class="text-muted">
               <i class="fas fa-calendar-alt text-end"></i>
-              {{post.created_on|date:"F d, Y" }}
+              <time class="m-1" datetime="{{ post.created_on }}">
+                {{ post.created_on|date:"M d, Y" }}
+              </time>
             </small>
           </li>
         </ul>
