--- a/templates/includes/post-snippet.html
+++ b/templates/includes/post-snippet.html
@@ -40,7 +40,7 @@
           <li class="list-inline-item">
             <small class="text-muted">
               <i class="fas fa-calendar-alt text-end"></i>
-              <time class="m-1" datetime="{{ post.created_on }}">
+              <time class="m-1" datetime="{{ post.created_on|date:"Y-m-d\TH:i:sP" }}">
                 {{ post.created_on|date:"M d, Y" }}
               </time>
             </small>
