--- a/templates/post-detail.html
+++ b/templates/post-detail.html
@@ -5,7 +5,7 @@
 {% block content %}
 
 <div class="row clearfix">
-  <section id="main-post" class="col-lg-8 col-md-12 left-box">
+  <div id="main-post" class="col-lg-8 col-md-12 left-box">
     <article class="card single_post">
       <div class="body p-3">
         <div class="img-post border rounded">
@@ -13,16 +13,18 @@
           <img
             src="https://codeinstitute.s3.amazonaws.com/fullstack/blog/default.jpg"
             class="img-fluid"
+            alt="Placeholder article image"
+
           />
           {% else %}
-          <img class="img-fluid" src="{{ post.featured_image.url }}" />
+          <img class="img-fluid" src="{{ post.featured_image.url }}" alt="Article hero image" />
           {% endif %}
         </div>
-        <h6
+        <span
           class="tag bg-purple p-1 text-uppercase fw-bold text-light"
         >
           {{post.category}}
-        </h6>
+        </span>
 
         <h1>{{post.title}}</h1>
         <div class="d-flex justify-content-between">
@@ -86,7 +88,7 @@
             </strong>
           </div>
         </div>
-        <hr />
+        <hr >
         <div class="mt-2 mb-2">{{ post.content | safe }}</div>
       </div>
     </article>
@@ -100,7 +102,7 @@
           </strong>
         </h2>
       </div>
-      <hr />
+      <hr >
       <div class="body">
         <ul class="comment-reply list-unstyled">
           {% for post in comments %}
@@ -114,7 +116,7 @@
     <section id="add-comment" class="card p-3 mt-3 mb-3">
       {% if user.is_authenticated %}
       <h2>Like what you read? Leave a comment!</h2>
-      <hr />
+      <hr>
       <div class="card-body p-1">
 
         <p>Posting as: {{ user.username }}</p>
@@ -128,10 +130,10 @@
         {% else %}
         <h2>Login to leave a comment</h2>
         <a class="btn btn-primary" href="{% url 'account_login' %}">Login</a>
-        <hr />
+        <hr>
         {% endif %}
     </section>
-  </section>
+  </div>
 
 
 
@@ -139,7 +141,7 @@
     <div class="card p-3">
       <div class="header">
         <h2 class="text-capitalize">Popular Posts in {{ post.category }}</h2>
-        <hr />
+        <hr>
       </div>
       <div class="body">
         <div class="row">
