#25 Updated profile, post-detail and nav accessibility

--- a/templates/base.html
+++ b/templates/base.html
@@ -45,12 +45,6 @@
         </button>
         <div class="collapse navbar-collapse" id="navbarText">
           <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-            <li class="nav-item">
-              <a class="nav-link" aria-current="page" href="{% url 'home' %}"
-                >Home</a
-              >
-            </li>
-
             <li class="nav-item dropdown">
               <div class="dropdown">
                 <button
@@ -170,6 +164,8 @@
                 href="https://www.facebook.com/"
                 role="button"
                 target="_blank"
+                aria-label="Link to our Facebook"
+
                 ><i class="fab fa-facebook-f"></i
               ></a>
     
@@ -179,6 +175,8 @@
                 href="https://twitter.com/"
                 role="button"
                 target="_blank"
+                aria-label="Link to our Twitter"
+
                 ><i class="fab fa-twitter"></i
               ></a>
     
@@ -188,6 +186,8 @@
                 href="https://www.google.com/"
                 role="button"
                 target="_blank"
+                aria-label="Link to our Google"
+
                 ><i class="fab fa-google"></i
               ></a>
     
@@ -197,6 +197,8 @@
                 href="https://www.facebook.com/"
                 role="button"
                 target="_blank"
+                aria-label="Link to our Instagram"
+
                 ><i class="fab fa-instagram"></i
               ></a>
     
@@ -206,6 +208,7 @@
                 href="https://www.linkedin.com/in/darrach-barneveld-2b493511b/"
                 role="button"
                 target="_blank"
+                aria-label="Link to our Linkedin"
                 ><i class="fab fa-linkedin-in"></i
               ></a>
     
@@ -215,6 +218,7 @@
                 href="https://github.com/DarrachBarneveld"
                 role="button"
                 target="_blank"
+                aria-label="Link to our Github"
                 ><i class="fab fa-github"></i
               ></a>
           </div>
