--- a/templates/includes/level.html
+++ b/templates/includes/level.html
@@ -1,9 +1,9 @@
 {% if level == 1 %}
-    <p class='bronze'>Bronze User</p>
+    <p class='bronze bg-dark p-1 m-1 rounded-2'>Bronze User</p>
 {% elif level == 2 %}
-    <p class='silver'>Silver Member</p>
+    <p class='silver bg-dark p-1 m-1 rounded-2'>Silver Member</p>
 {% elif level == 3 %}
-    <p class='gold'>Gold Member</p>
+    <p class='gold bg-dark p-1 m-1 rounded-2'>Gold Member</p>
 {% elif level >= 4 %}
-    <p class='platinum'>Platinum Member</p>
+    <p class='platinum bg-dark p-1 m-1 rounded-2'>Platinum Member</p>
 {% endif %}
