--- a/templates/includes/post-preview.html
+++ b/templates/includes/post-preview.html
@@ -5,10 +5,11 @@
   <img
     class="card-img-top"
     src="https://codeinstitute.s3.amazonaws.com/fullstack/blog/default.jpg"
-    alt="Placeholder article image"
-  >
+    alt="Code Institutes placeholder article image"
+    >
   {% else %}
-  <img class="card-img-top" src=" {{ post.featured_image.url }}" alt="Article hero image" >
+  <img class="card-img-top" src=" {{ post.featured_image.url }}" alt="{{post.title}} 
+  article image" >
   {% endif %}
   <div class="card-body p-2">
     <h3 class="h5 mb-3">
@@ -51,7 +52,7 @@
     <a
       href="{% url 'post-detail' slug=post.slug %}"
       class="btn btn-outline-primary"
-      >Read More</a
+      >Explore</a
     >
     {% if user.is_authenticated and user.id == post.author.id %}
     <a href="{% url 'edit_post' slug=post.slug %}" class="btn btn-primary"
