--- a/templates/includes/post-snippet.html
+++ b/templates/includes/post-snippet.html
@@ -6,11 +6,12 @@
       <img
         class="card-img-sm"
         src="https://codeinstitute.s3.amazonaws.com/fullstack/blog/default.jpg"
-        alt="Placeholder article image"
+        alt="Code Institutes placeholder article image"
 
       >
       {% else %}
-      <img class="card-img-sm" src="{{ post.featured_image.url }}" alt="Article hero image" >
+      <img class="card-img-sm" src="{{ post.featured_image.url }}" alt="{{post.title}} 
+      article image" >
       {% endif %}
       <div class="ps-2">
         <h3 class="text-capitalize h6">
@@ -40,7 +41,7 @@
           <li class="list-inline-item">
             <small class="text-muted">
               <i class="fas fa-calendar-alt text-end"></i>
-              <time class="m-1" datetime="{{ post.created_on|date:"Y-m-d\TH:i:sP" }}">
+              <time class="m-1" datetime="{{ post.created_on|date:"Y-m-d\TH:i:s" }}">
                 {{ post.created_on|date:"M d, Y" }}
               </time>
             </small>
