--- a/templates/includes/post-snippet.html
+++ b/templates/includes/post-snippet.html
@@ -6,12 +6,10 @@
       <img
         class="card-img-sm"
         src="https://codeinstitute.s3.amazonaws.com/fullstack/blog/default.jpg"
-        alt="Code Institutes placeholder article image"
-
-      >
+        alt="Code Institutes placeholder article image">
       {% else %}
       <img class="card-img-sm" src="{{ post.featured_image.url }}" alt="{{post.title}} 
-      article image" >
+      article image">
       {% endif %}
       <div class="ps-2">
         <h3 class="text-capitalize h6">
