Readded home navigation button

--- a/templates/post-detail.html
+++ b/templates/post-detail.html
@@ -13,13 +13,9 @@
           <img
             src="https://codeinstitute.s3.amazonaws.com/fullstack/blog/default.jpg"
             class="img-fluid"
-            alt="Code Institutes placeholder article image"
-
-          />
+            alt="Code Institutes placeholder article image">
           {% else %}
-          <img class="img-fluid" src="{{ post.featured_image.url }}"  alt="{{post.title}} 
-          article image"
-          />
+          <img class="img-fluid" src="{{ post.featured_image.url }}"  alt="{{post.title}} article image">
           {% endif %}
         </div>
         <span
