--- a/templates/base.html
+++ b/templates/base.html
@@ -45,6 +45,9 @@
         </button>
         <div class="collapse navbar-collapse" id="navbarText">
           <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+            <li class="nav-item">
+              <a class="nav-link" href="{% url 'home' %}">Home</a>
+            </li>
             <li class="nav-item dropdown">
               <div class="dropdown">
                 <button
