--- a/templates/add_post.html
+++ b/templates/add_post.html
@@ -1,5 +1,7 @@
 {% extends "base.html" %}
 
+{% block title %}CoolCoders | Add Post{% endblock %}
+
 {% load crispy_forms_tags %}
 
 {% block content %}
