--- a/templates/base.html
+++ b/templates/base.html
@@ -3,7 +3,6 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <title>CodeStar Blog</title>
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link
       href="https://fonts.googleapis.com/css2?family=Roboto:wght@300&display=swap"
@@ -24,6 +23,7 @@
       integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC"
       crossorigin="anonymous"
     >
+    <title>{% block title %}CoolCoders{% endblock %}</title>
 
     <link rel="stylesheet" href="{% static 'css/styles.css' %}" >
   </head>
