--- a/templates/edit_post.html
+++ b/templates/edit_post.html
@@ -1,7 +1,10 @@
 {% extends "base.html" %}
-<!--  -->
+
+{% block title %}CoolCoders | Edit Post}{% endblock %}
+
+
 {% load crispy_forms_tags %}
-<!--  -->
+
 {% block content %}
 
 <h1 class='pt-3 display-6 fw-bolder text-center'>
