--- a/templates/profile.html
+++ b/templates/profile.html
@@ -1,4 +1,8 @@
-{% extends 'base.html' %} {% block content %}
+{% extends 'base.html' %}
+
+{% block title %}CoolCoders | {{profile.username}}{% endblock %}
+
+{% block content %}
 
 <section id="about" class="p-lg-4">
   <div class="row">
