Removed JQuery script import

--- a/templates/base.html
+++ b/templates/base.html
@@ -3,13 +3,12 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+    <meta name="description" content="CoolCoders lets you explore the wonderful world of tech with like minded individuals.">
+    <meta name="keywords" content="blog, tech, gadgets, forum, coding, programming">
+    <meta name="author" content="Darrach Barneveld">
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link
       href="https://fonts.googleapis.com/css2?family=Roboto:wght@300&display=swap"
-      rel="stylesheet"
-    >
-    <link
-      href="https://fonts.googleapis.com/css2?family=Lato:wght@300;700&display=swap"
       rel="stylesheet"
     >
     <link
@@ -235,7 +234,6 @@
       integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
       crossorigin="anonymous"
     ></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     <script
       src="https://kit.fontawesome.com/27545168c5.js"
       crossorigin="anonymous"
