--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -245,7 +245,7 @@ img {
 
 /* ANIMATIONS */
 
-.fade-in {
+/* .fade-in {
   opacity: 0;
   animation: fadeIn 1s ease-in forwards;
   animation-duration: 500ms;
@@ -258,4 +258,4 @@ img {
   100% {
     opacity: 1;
   }
-}
+} */
