--- a/templates/base.html
+++ b/templates/base.html
@@ -1,27 +1,26 @@
 {% load static %}
+{% load cloudinary %}
+
 
 <!DOCTYPE html>
 <html lang="en">
   <head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="description" content="CoolCoders lets you explore the wonderful world of tech with like minded individuals.">
     <meta name="keywords" content="blog, tech, gadgets, forum, coding, programming">
     <meta name="author" content="Darrach Barneveld">
-    <link rel="preconnect" href="https://fonts.gstatic.com">
-    <link
-      href="https://fonts.googleapis.com/css2?family=Roboto:wght@300&display=swap"
-      rel="stylesheet"
-    >
-    <link
-      rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css"
-    >
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <!-- Bootstrap CDN -->
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css"
       rel="stylesheet"
       integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC"
       crossorigin="anonymous"
     >
+    <!-- CSS -->
+    <link rel="stylesheet" href="{% static 'css/style.css' %}">
+
     <title>{% block title %}CoolCoders{% endblock %}</title>
 
     <link rel="stylesheet" href="{% static 'css/styles.css' %}" >
@@ -229,11 +228,15 @@
           </div>
         </footer>
 
+
+    <!-- Bootstrap scripts -->
     <script
-      src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
-      integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
-      crossorigin="anonymous"
-    ></script>
+    src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
+    crossorigin="anonymous"
+  ></script>
+
+    <!-- Font Awesome script -->
     <script
       src="https://kit.fontawesome.com/27545168c5.js"
       crossorigin="anonymous"
