#40 Added error pages to readme and testing .md

--- a/templates/base.html
+++ b/templates/base.html
@@ -17,7 +17,7 @@
       crossorigin="anonymous"
     >
     <!-- CSS -->
-    <link rel="stylesheet" href="{% static 'css/styles.css' %}">
+    <link rel="stylesheet" type="text/css" href="{% static 'css/styles.css' %}">
     <title>{% block title %}CoolCoders{% endblock %}</title>
   </head>
   <body class="d-flex flex-column h-100">
