Added 3 favicon icons for different platforms

--- a/templates/base.html
+++ b/templates/base.html
@@ -9,6 +9,15 @@
     <meta name="keywords" content="blog, tech, gadgets, forum, coding, programming">
     <meta name="author" content="Darrach Barneveld">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+
+     <!-- Standard Favicon for Most Browsers -->
+     <link rel="icon" href="https://res.cloudinary.com/barneslow/image/upload/v1698537711/ifcugibxrta4a0qaqlbv.ico" type="image/x-icon">
+
+     <!-- Apple Touch Icon (iOS) -->
+     <link rel="apple-touch-icon" sizes="180x180" href="https://res.cloudinary.com/barneslow/image/upload/v1698537711/rzxcltivsvxvrs12tn7o.png">
+     
+     <!-- Android Chrome Icons -->
+     <link rel="icon" type="image/png" sizes="32x32" href="https://res.cloudinary.com/barneslow/image/upload/v1698537711/sadw1ablntgimsixl2ez.png">
     <!-- Bootstrap CDN -->
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css"
