--- a/templates/add_post.html
+++ b/templates/add_post.html
@@ -9,6 +9,8 @@
 <h1 class='pt-3 display-6 fw-bolder text-center'>
   <strong class='text-uppercase text-green'>Add Post</strong>
 </h1>
+{% load cloudinary %}
+
   <form
     method="post"
     enctype="multipart/form-data"
