--- a/templates/post-detail.html
+++ b/templates/post-detail.html
@@ -61,6 +61,7 @@
                   value="{{post.slug}}"
                   class="btn-like"
                   style="border: none; background: transparent"
+                  aria-label="Like This Article"
 
                 >
                   <i class="fa-solid fa-thumbs-up text-primary"></i>
@@ -72,6 +73,7 @@
                   value="{{post.slug}}"
                   class="btn-like text-primary"
                   style="border: none; background: transparent"
+                  aria-label="Unlike This Article"
 
                 >
                   <i class="fa-regular fa-thumbs-up"></i>
