--- a/templates/update_profile.html
+++ b/templates/update_profile.html
@@ -7,7 +7,7 @@
 {% load crispy_forms_tags %}
 <section id="profile" class="container text-center p-4">
     <h1 class='display-5 text-green fw-bolder'>Edit Your User Information</h1>
-    <div class="custom-form p-lg-4 p-2 pt-4 rounded-2 shadow-lg bg-light text-center my-3">
+    <div class="custom-form p-lg-4 p-2 pt-4 rounded-2 shadow-lg bg-white text-center my-3">
       <form method="post" class="mb-5">
         {% csrf_token %}
         {{ user_form | crispy }}
