--- a/templates/account/signup.html
+++ b/templates/account/signup.html
@@ -13,7 +13,7 @@
   <div class="row justify-content-center">
     <div class="col-12 col-md-6 col-lg-4 mt-5 mb-5">
       <form
-        class="bg-light text-center p-4 text-dark rounded-1"
+        class="bg-white text-center p-4 text-dark rounded-1"
         id="signup_form"
         method="post"
         action="{% url 'account_signup' %}"
