--- a/templates/add_post.html
+++ b/templates/add_post.html
@@ -9,12 +9,12 @@
 <h1 class='pt-3 display-6 fw-bolder text-center'>
   <strong class='text-uppercase text-green'>Add Post</strong>
 </h1>
-{% load cloudinary %}
+  <!--  Add Post Form -->
 
   <form
     method="post"
     enctype="multipart/form-data"
-    class='custom-form p-lg-4 p-2 pt-4 rounded-2 shadow-lg bg-light text-center my-3'
+    class='custom-form p-lg-4 p-2 pt-4 rounded-2 shadow-lg bg-white my-3'
   >
     {{ form | crispy }}
     <!--  -->
