--- a/templates/includes/trophy.html
+++ b/templates/includes/trophy.html
@@ -1,3 +1,5 @@
+ <!-- Reusable trophy rendering function for user level -->
+
 {% if level == 1 %}
     <i class="fa-solid fa-trophy profile-icon bronze"></i>
 {% elif level == 2 %}
