--- a/templates/edit_post.html
+++ b/templates/edit_post.html
@@ -15,7 +15,7 @@
   <form
     method="post"
     enctype="multipart/form-data"
-    class='custom-form p-lg-4 p-2 pt-4 rounded-2 shadow-lg bg-white text-center my-3'
+    class='custom-form p-lg-4 p-2 pt-4 rounded-2 shadow-lg bg-white my-3'
   >
     {{ form | crispy }}
 
