--- a/templates/home.html
+++ b/templates/home.html
@@ -16,7 +16,7 @@
 
   <div class="row pt-md-5">
     <div class="col-lg-4 mb-5">
-      <h2 class="bg-green rounded-3 text-black border-success">
+      <h2 class="bg-green rounded-3 text-black text-uppercase fw-bolder">
         <strong><em>Editors Pick</em></strong>
       </h2>
       {% for post in editors_pick %} 
@@ -25,7 +25,7 @@
     </div>
 
     <div class="col-lg-4 mb-5">
-      <h2 class="bg-green rounded-3 text-black">
+      <h2 class="bg-green rounded-3 text-black text-uppercase fw-bolder">
         <strong><em>Trending Posts</em></strong>
       </h2>
       {% for post in trending_posts %} 
@@ -35,7 +35,7 @@
 
 
     <div class="col-lg-4 mb-5">
-      <h2 class="bg-green rounded-3 text-black">
+      <h2 class="bg-green rounded-3 text-black text-uppercase fw-bolder">
         <strong><em>Popular Post</em></strong>
       </h2>
       {% for post in popular_post %} 
