--- a/templates/includes/widgets.html
+++ b/templates/includes/widgets.html
@@ -1,3 +1,5 @@
+ <!-- Navigation Widgets -->
+
 <ul class="list-inline widget-list-inline">
     <li class="list-inline-item m-1">
       <a href="{% url 'index' 'tech'   %}">Tech</a>
