--- a/templates/post-detail.html
+++ b/templates/post-detail.html
@@ -8,6 +8,7 @@
 
 <div class="row clearfix">
   <div id="main-post" class="col-lg-8 col-md-12 left-box">
+    <!-- Main Post Section -->
     <article class="card single_post">
       <div class="body p-3">
         <div class="img-post border rounded">
@@ -20,13 +21,13 @@
           <img class="img-fluid" src="{{ post.featured_image.url }}"  alt="{{post.title}} article image">
           {% endif %}
         </div>
-        <span
+        <p
           class="tag bg-purple p-1 text-uppercase fw-bold text-light"
         >
           {{post.category}}
-        </span>
+        </p>
 
-        <h1>{{post.title}}</h1>
+        <h1 class='fw-bolder'>{{post.title}}</h1>
         <div class="d-flex justify-content-between">
           <div class="d-flex justify-content-center align-items-center gap-1">
               {% include 'includes/trophy.html' with level=post.author.profile.get_level %}
@@ -40,6 +41,7 @@
             
           </div>
 
+           <!-- Edit Button If Auth -->
           <div class="d-flex align-items-center justify-content-center gap-2">
             {% if user.is_authenticated and user.id == post.author.id %}
             <a href="{% url 'edit_post' slug=post.slug %}" class="btn btn-primary"
@@ -47,6 +49,8 @@
             >
             {% endif %}
       
+            <!-- Toggle Like Button -->
+
             <strong class="h3 m-0">
               {% if user.is_authenticated %}
               <form
@@ -92,9 +96,11 @@
           </div>
         </div>
         <hr >
+        <!-- Post Content -->
         <div class="mt-2 mb-2">{{ post.content | safe }}</div>
       </div>
     </article>
+
 
     <section id="comments" class="card p-3 mt-3">
       <div class="header">
@@ -109,13 +115,14 @@
       <div class="body">
         <ul class="comment-reply list-unstyled">
           {% for post in comments %}
-          <!--  -->
+          <!-- Render All Comments  -->
           {% include "includes/comment.html" %}
           {% endfor %}
         </ul>
       </div>
     </section>
 
+    <!-- Add Comment Form -->
     <section id="add-comment" class="card p-3 mt-3 mb-3">
       {% if user.is_authenticated %}
       <h2>Like what you read? Leave a comment!</h2>
@@ -139,23 +146,17 @@
   </div>
 
 
-
-  <section id="popular-posts" class="col-lg-4 col-md-12 right-box">
-    <div class="card p-3">
-      <div class="header">
-        <h2 class="text-capitalize">Popular Posts in {{ post.category }}</h2>
-        <hr>
-      </div>
-      <div class="body">
+ <!-- Popular Post Section -->
+  <section id="popular-posts" class="col-lg-4 col-md-12">
+        <h2 class="text-uppercase bg-green rounded-3 text-black text-center border-success fw-bolder">Popular {{ post.category }}</h2>
         <div class="row">
           <div class="col-lg-12">
             {% for post in top_related_posts %}
+             <!-- Render All Popular Posts -->
             {% include "includes/post-preview.html" %}
             {% endfor %}
           </div>
         </div>
-      </div>
-    </div>
   </section>
 </div>
 
