--- a/templates/profile.html
+++ b/templates/profile.html
@@ -4,6 +4,8 @@
 
 {% block content %}
 
+ <!-- User Profile Information -->
+
 <section id="about" class="p-lg-4">
   <div class="row">
     <div class="col-md-4 mb-3">
@@ -62,6 +64,8 @@
           </div>
           <hr>
 
+           <!-- Edit btn if User is Auth -->
+
           {% if user.is_authenticated and user.id == profile.id %}
 
           <div class="row">
@@ -80,6 +84,8 @@
     </div>
   </div>
 </section>
+
+<!-- User Statistics -->
 
 <section id="statistics">
   <div class="card p-2">
@@ -174,6 +180,8 @@
   {% endif %}
 
 </section>
+
+<!-- User Favourites Section -->
 
 <section id="favourites" class="text-center">
   <div class="row p-3">
