#42 Created custom password form to avoid default autofocus issues

--- a/templates/base.html
+++ b/templates/base.html
@@ -141,6 +141,7 @@
       {% endfor %}
     </div>
 
+    <!-- Styling Banner background wavy line -->
     <div id="banner">
       <div class="text-center position-relative">
         <svg
