--- a/templates/edit_post.html
+++ b/templates/edit_post.html
@@ -10,7 +10,8 @@
 <h1 class='pt-3 display-6 fw-bolder text-center'>
   <strong class='text-uppercase text-green'>Edit Post</strong>
 </h1>
-{% load cloudinary %}
+
+<!-- Edit Post Form -->
 
   <form
     method="post"
@@ -22,6 +23,7 @@
     {% csrf_token %}
 
     <button type="submit" class="btn btn-primary">Submit</button>
+    <!-- Delete Post Modal -->
     {% include "includes/modal.html" %}
 
   </form>
