--- a/templates/includes/comment.html
+++ b/templates/includes/comment.html
@@ -14,6 +14,7 @@
     {{post.body | linebreaks}}
     <label class="list-inline text-primary"> {{post.created_on}} </label> 
     {% if user.is_authenticated and user.id == post.name.id %}
+    <!-- Comment Delete Modal  -->
     {% include "includes/modal.html" %}
     {% endif %} 
   </div>
