--- a/templates/post-detail.html
+++ b/templates/post-detail.html
@@ -28,17 +28,17 @@
         </p>
 
         <h1 class='fw-bolder'>{{post.title}}</h1>
+        <time class="m-1 text-secondary text-decoration-underline" datetime="{{ post.created_on|date:"Y-m-d\TH:i:s" }}">
+          {{post.created_on}}             
+        </time>
+
+        <!-- Article Information -->
         <div class="d-flex justify-content-between">
           <div class="d-flex justify-content-center align-items-center gap-1">
               {% include 'includes/trophy.html' with level=post.author.profile.get_level %}
                 <a href="{% url 'profile' post.author.username %}"
                   ><strong class='text-capitalize'>{{post.author}}</strong>
                 </a>
-
-              <time class="m-1 text-secondary" datetime="{{ post.created_on|date:"Y-m-d\TH:i:s" }}">
-                {{post.created_on}}             
-              </time>
-            
           </div>
 
            <!-- Edit Button If Auth -->
