--- a/templates/update_profile.html
+++ b/templates/update_profile.html
@@ -8,6 +8,9 @@
 <section id="profile" class="container text-center p-4">
     <h1 class='display-5 text-green fw-bolder'>Edit Your User Information</h1>
     <div class="custom-form p-lg-4 p-2 pt-4 rounded-2 shadow-lg bg-white text-center my-3">
+
+      <!-- User Update Form -->
+
       <form method="post" class="mb-5">
         {% csrf_token %}
         {{ user_form | crispy }}
@@ -18,6 +21,7 @@
       </form>
 
       <hr>
+      <!-- User Bio Form -->
 
       <form method="post" class="mb-5">
         {% csrf_token %}
@@ -27,6 +31,8 @@
         </button>
       </form>
 
+       <!-- User Password Form -->
+
       <h2>Change Your Password</h2>
       <form method="post" class="mb-5">
         {% csrf_token %} {{ password_form | crispy}}
@@ -34,6 +40,8 @@
           <i class="fa-solid fa-unlock"></i> Change Password
         </button>
       </form>
+
+       <!-- User Delete Account Modal  -->
 
       <h2 class='text-danger fw-bold mb-5 text-decoration-underline'>Delete your account</h2>
       {% include "includes/modal.html" %}
