Added generic form styling

--- a/templates/account/signup.html
+++ b/templates/account/signup.html
@@ -30,7 +30,7 @@
         />
         <!--  -->
         {% endif %}
-        <button class="btn btn-outline-dark" type="submit">
+        <button class="btn btn-outline-success" type="submit">
           {% trans "Sign up" %}
         </button>
       </form>
