--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -31,6 +31,15 @@ img {
   object-fit: cover;
 }
 
+form input,
+form button {
+  margin-block: 1rem;
+}
+
+form label {
+  font-weight: bolder;
+}
+
 .card-img-sm {
   width: 100px;
   height: 100px;
