--- a/templates/account/login.html
+++ b/templates/account/login.html
@@ -27,7 +27,7 @@
           value="{{ redirect_field_value }}"
         />
         {% endif %}
-        <button class="btn btn-outline-dark" type="submit">
+        <button class="btn btn-outline-success" type="submit">
           {% trans "Sign In" %}
         </button>
       </form>
