#25 Added manual testing of pages to to testing.md

--- a/templates/profile.html
+++ b/templates/profile.html
@@ -71,7 +71,7 @@
           <div class="row">
             <div class="col-sm-12">
               <a
-                class="btn-lg btn-info text-decoration-none"
+                class="btn-lg btn-primary text-decoration-none"
                 href="{% url 'update_profile' %}"
                 ><i class="fa-solid fa-gears"></i>Settings</a
               >
