--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -164,6 +164,14 @@ form label {
 
 /* ADD/EDIT POST FORM */
 
+.form-control {
+  border: 1px solid var(--primary-black);
+}
+
+.form-check-input {
+  border: 1px solid var(--primary-black);
+}
+
 .custom-form {
   max-width: 800px;
   margin: auto;
@@ -174,6 +182,10 @@ form label {
 .custom-form select {
   border: 1px solid var(--primary-black);
   margin-block: 0.5rem;
+}
+
+.custom-form select {
+  text-transform: capitalize;
 }
 
 .custom-form label {
