--- a/templates/category.html
+++ b/templates/category.html
@@ -15,12 +15,12 @@
   {% include "includes/widgets.html" %}
 
   <h2 class="mt-2 text-light border-bottom">
-    <em>Uncover the latest {{category.title}} updates!</em>
+    <em>{{category.description}}</em>
   </h2>
     <div class="row p-3">
       {% for post in posts %}
       <div class="col-md-4 g-3 mt-3 mb-3">
-        <!-- Render Preview Post Cards -->
+          <!-- Render Preview Post Cards -->
 
         {% include "includes/post-preview.html" %}
       </div>
