--- a/templates/category.html
+++ b/templates/category.html
@@ -28,6 +28,9 @@
       {% endfor %}
     </div>
     
+
+    {% if page_obj.has_other_pages %}
+
     <!-- Page Pagination -->
     <nav aria-label="Page navigation">
         <ul class="pagination justify-content-center">
@@ -63,6 +66,8 @@
           {% endif %}
         </ul>
       </nav>
+
+      {% endif %}
 </div>
 
 {%endblock%}
