--- a/templates/category.html
+++ b/templates/category.html
@@ -19,7 +19,7 @@
   </h2>
     <div class="row p-3">
       {% for post in posts %}
-      <div class="col-md-4 g-3 mt-3 mb-3">
+      <div class="col-md-4 g-3 mt-3 mb-3 d-flex">
           <!-- Render Preview Post Cards -->
 
         {% include "includes/post-preview.html" %}
