--- a/templates/profile.html
+++ b/templates/profile.html
@@ -136,7 +136,7 @@
     {% endif %}
 
       {% for post in posts_page %}
-          <div class="col-lg-3 col-md-6 g-1 mt-3 mb-3">
+          <div class="col-lg-3 col-md-6 g-1 mt-3 mb-3 d-flex">
               {% include "includes/post-preview.html" %}
           </div>
       {% endfor %}
@@ -198,7 +198,7 @@
     {% endif %}
 
       {% for post in favourites_page %}
-          <div class="col-lg-3 col-md-6 g-1 mt-3 mb-3">
+          <div class="col-lg-3 col-md-6 g-1 mt-3 mb-3 d-flex">
               {% include "includes/post-preview.html" %}
           </div>
       {% endfor %}
