--- a/templates/base.html
+++ b/templates/base.html
@@ -165,7 +165,7 @@
     </main>
 
         <!-- Footer -->
-        <footer class="bg-dark text-center text-white">
+        <footer class="bg-dark text-center text-white mt-3">
           <div class="container p-4 pb-0 mb-4">
               <!-- Facebook -->
               <a
