#25 fixed update profile html block content

--- a/templates/update_profile.html
+++ b/templates/update_profile.html
@@ -45,6 +45,7 @@
 
       <h2 class='text-danger fw-bold mb-5 text-decoration-underline'>Delete your account</h2>
       {% include "includes/modal.html" %}
+    </div>
 </section>
 
 {% endblock content %}
