#25 Added post detail page/comment form to manual testing.md

--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -178,6 +178,7 @@ form label {
   border-radius: 100%;
   background: linear-gradient(270deg, #000000, #434343);
   height: 100px;
+  text-decoration: none;
 }
 
 /* ALL AUTH FORM */
