#44 Added spacing between comments

--- a/templates/base.html
+++ b/templates/base.html
@@ -203,7 +203,7 @@
               <!-- Instagram -->
               <a
                 class="btn btn-outline-light m-1 instagram"
-                href="https://www.facebook.com/"
+                href="https://www.instagram.com/"
                 role="button"
                 target="_blank"
                 aria-label="Link to our Instagram"
