--- a/templates/includes/comment.html
+++ b/templates/includes/comment.html
@@ -6,7 +6,7 @@
       {% include 'includes/trophy.html' with level=post.name.profile.get_level%}
     </a>
   </div>
-  <div class="text-box col-md-10 col-8">
+  <div class="text-box col-md-10 col-8 mb-3">
     <a
       href="{% url 'profile' post.name.username %}"
       class="h5 m-b-0 text-capitalize text-decoration-none"
@@ -18,4 +18,5 @@
     <!-- Comment Delete Modal  -->
     {% include "includes/modal.html" %} {% endif %}
   </div>
+  <hr>
 </li>
