#44 Added UX feedback to like toggle button

--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -148,9 +148,11 @@ form label {
 }
 
 /* POST DETAIL */
-.btn-like {
-  border: none;
-  background: transparent;
+
+.btn-like:hover,
+.btn-like:focus {
+  filter: brightness(0.9);
+  transform: scale(1.05);
 }
 
 /* BANNER */
