--- a/templates/post-detail.html
+++ b/templates/post-detail.html
@@ -63,12 +63,11 @@
                   type="submit"
                   name="blogpost_id"
                   value="{{post.slug}}"
-                  class="btn-like"
                   style="border: none; background: transparent"
                   aria-label="Like This Article"
 
                 >
-                  <i class="fa-solid fa-thumbs-up text-primary"></i>
+                  <i class="fa-solid fa-thumbs-up text-primary btn-like"></i>
                 </button>
                 {% else %}
                 <button
@@ -80,14 +79,14 @@
                   aria-label="Unlike This Article"
 
                 >
-                  <i class="fa-regular fa-thumbs-up"></i>
+                  <i class="fa-regular fa-thumbs-up btn-like"></i>
                 </button>
                 {% endif %}
               </form>
 
               {% else %}
               <a style="text-decoration: none;" href="{% url 'account_login' %}" aria-label="Link to the login page">
-                <i class="far fa-heart text-secondary"></i>
+                <i class="far fa-heart text-secondary btn-like"></i>
               </a>
               {% endif %}
               <!-- The number of likes goes before the closing strong tag -->
