--- a/templates/post-detail.html
+++ b/templates/post-detail.html
@@ -18,7 +18,7 @@
             class="img-fluid"
             alt="Code Institutes placeholder article image">
           {% else %}
-          <img class="img-fluid" src="{{ post.featured_image.url }}"  alt="{{post.title}} article image">
+          <img class="post-detail-image" src="{{ post.featured_image.url }}"  alt="{{post.title}} article image">
           {% endif %}
         </div>
         <p
