--- a/templates/base.html
+++ b/templates/base.html
@@ -124,14 +124,13 @@
 
     <!-- Message Notifications - Code Institute's I Think Therefore I Blog Source -->
     <div class="flex position-relative m-2">
-      {% comment %} {% for message in messages %} {% endcomment %}
+      {% for message in messages %}
       <div
         class="alert-fixed alert {{ message.tags }} alert-info alert-dismissible fade show"
         id="msg"
         role="alert"
       >
-        {% comment %} {{ message | safe }} {% endcomment %}
-        Comment created successfully! Review in progress!
+        {{ message | safe }}
         <button
           type="button"
           class="btn-close"
@@ -139,7 +138,7 @@
           aria-label="Close"
         ></button>
       </div>
-      {% comment %} {% endfor %} {% endcomment %}
+      {% endfor %}
     </div>
 
     <!-- Styling Banner background wavy line -->
