--- a/templates/profile.html
+++ b/templates/profile.html
@@ -131,7 +131,7 @@
   </h2>
   {% for post in pending_posts %}
   <div class="col-lg-3 col-md-6 g-1 mt-3 mb-3 d-flex">
-      {% include "includes/post-snippet.html" %}
+    {% include "includes/pending-post.html" %}
   </div>
   </div>
 {% endfor %}
