--- a/templates/base.html
+++ b/templates/base.html
@@ -166,7 +166,21 @@
 
         <!-- Footer -->
         <footer class="bg-dark text-center text-white mt-3">
-          <div class="container p-4 pb-0 mb-4">
+          
+          <h2 class='h4 p-4' >Contact the team!</h2>
+
+          <div class="container pb-4 mb-4">
+
+              <!-- Email -->
+               <a
+                  class="btn btn-outline-light m-1 email"
+                  href="mailto:darrachb1991@gmail.com"
+                  role="button"
+                  aria-label="Email the developer"
+
+                  >
+                  <i class="fa fa-envelope"></i>
+                </a>
               <!-- Facebook -->
               <a
                 class="btn btn-outline-light m-1 facebook"
