Improved semantic html markup

--- a/templates/category.html
+++ b/templates/category.html
@@ -6,7 +6,7 @@
 
 
 
-<div class="pt-3 text-center">
+<section class="pt-3 text-center">
   <h1 class='display-2 fw-bolder'>
     <strong class='text-uppercase text-green'>{{category.title}}</strong>
   </h1>
@@ -68,6 +68,6 @@
       </nav>
 
       {% endif %}
-</div>
+</section>
 
 {%endblock%}
