Feature: Progress bar to profile page, get progress method to profile model

--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -75,12 +75,24 @@ form label {
   color: var(--silver);
 }
 
+.bg-silver {
+  background-color: var(--silver);
+}
+
 .gold {
   color: var(--gold);
 }
 
+.bg-gold {
+  background-color: var(--gold);
+}
+
 .platinum {
   color: var(--platinum);
+}
+
+.bg-platinum {
+  background-color: var(--platinum);
 }
 
 .bg-purple {
