--- a/templates/profile.html
+++ b/templates/profile.html
@@ -15,7 +15,8 @@
             {% include 'includes/trophy.html' with level=profile.profile.get_level %}
             <div class="mt-3">
               <h1 class="text-capitalize">{{profile.username}}</h1>
-                {% include 'includes/level.html' with level=profile.profile.get_level %}
+                {% include 'includes/level.html' with level=profile.profile.get_level progress=profile.profile.get_progress %}
+
               <p class="text-secondary mb-1">
                 Joined: {{profile.date_joined|date:"F d, Y" }}
               </p>
