Removed approval process for comments, allowed instant publications

--- a/templates/includes/comment.html
+++ b/templates/includes/comment.html
@@ -1,5 +1,8 @@
 {% load static %}
 
+ <!-- Reusable Comment Card -->
+
+
 <li class="row clearfix">
   <div class="col-md-2 col-4">
     <a class="user-icon" href="{% url 'profile' post.name.username %}">
