--- a/templates/includes/pending-post.html
+++ b/templates/includes/pending-post.html
@@ -2,7 +2,7 @@
 
 <!-- Reusable Card For Pending Posts Renders -->
 
-<article class="card mb-4 text-start fade-in position-relative border-green">
+<article class="card mb-4 text-start fade-in position-relative border-green w-100">
   <div class="position-absolute overlay text-white">
     <i class="fa-solid fa-clock h1"></i>
     <span class="m-2 fw-bolder">Pending Approval</span>
