--- a/templates/includes/level.html
+++ b/templates/includes/level.html
@@ -1,24 +1,26 @@
+<!-- HTML check to return the user level and progress to next level-->
+
 {% if level == 1 %}
     <p class='bronze bg-dark p-1 my-1 rounded-2 w-100'>Bronze User</p>
     <div class="progress w-100 border" style='height:22px'>
-        <span class='bg-transparent position-absolute text-capitalize' >{{progress}}% to silver</span>
+        <span class='bg-transparent position-absolute text-capitalize fw-bold' >{{progress}}% to silver</span>
         <div class="progress-bar progress-bar-striped bg-silver" role="progressbar" style="width: {{progress}}%;" aria-valuenow="{{progress}}" aria-valuemin="0" aria-valuemax="100"></div>
     </div>
 {% elif level == 2 %}
     <p class='silver bg-dark p-1 my-1 rounded-2 w-100'>Silver Member</p>
     <div class="progress w-100 border" style='height:22px'>
-        <span class='bg-transparent position-absolute text-capitalize' >{{progress}}% to gold</span>
-        <div class="progress-bar progress-bar-striped bg-gold" role="progressbar" style="width: {{progress}}%" aria-valuenow="{{progress}}" aria-valuemin="0" aria-valuemax="100">{{progress}}</div>
+        <span class='bg-transparent position-absolute text-capitalize fw-bold' >{{progress}}% to gold</span>
+        <div class="progress-bar progress-bar-striped bg-gold" role="progressbar" style="width: {{progress}}%" aria-valuenow="{{progress}}" aria-valuemin="0" aria-valuemax="100"></div>
     </div>
 {% elif level == 3 %}
     <p class='gold bg-dark p-1 my-1 rounded-2 w-100'>Gold Member</p>
-    <span class='bg-transparent position-absolute text-capitalize' >{{progress}}% to platinum</span>
+    <span class='bg-transparent position-absolute text-capitalize fw-bold' >{{progress}}% to platinum</span>
     <div class="progress w-100 border" style='height:22px'>
         <div class="progress-bar progress-bar-striped bg-platinum" role="progressbar" style="width: {{progress}}%" aria-valuenow="{{progress}}" aria-valuemin="0" aria-valuemax="100"></div>
     </div>
 {% elif level >= 4 %}
     <p class='platinum bg-dark p-1 my-1 rounded-2 w-100'>Platinum Member</p>
     <div class="progress w-100 border" style='height:22px'>
-        <div class="progress-bar progress-bar-striped bg-platinum" role="progressbar" style="width: 100%" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100"></div>
+        <div class="progress-bar progress-bar-striped bg-platinum fw-bold" role="progressbar" style="width: 100%" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100"></div>
     </div>
 {% endif %}
