#53 Created a code of conduct view, url and template page

--- a/templates/base.html
+++ b/templates/base.html
@@ -247,6 +247,7 @@
           </div>
           <div class="text-center p-3" style="background-color: rgba(0, 0, 0, 0.2)">
             © 2023 Copyright: CoolCoders - For educational purposes
+            <p><a href="{% url 'code_of_conduct' %}">Code of Conduct</a></p>
           </div>
         </footer>
 
