Fixed footer html validation issues

--- a/templates/code_of_conduct.html
+++ b/templates/code_of_conduct.html
@@ -4,12 +4,15 @@
 <!--  -->
 {%block content %}
 
+
 <div class="container">
   <div class="row">
     <div class="col-md-8 offset-md-2">
       <h1 class="display-2 fw-bolder text-center mb-3">
         <strong class="text-uppercase text-green">Code of Conduct</strong>
       </h1>
+
+      <!-- Code of Conduct List -->
       <ul class="list-group my-5">
         <li class="list-group-item d-flex align-items-center">
           <i class="fas fa-hands-praying me-4 h4 text-green"></i>
